# PyTorch-Playground

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  model.py  notebook.ipynb  pyproject.toml  requirements.txt
notebook/: checkpoint.pth  notebook.ipynb  nots.ipynb  optimization-experiment.ipynb  pytorch-autograds.ipynb  pytorch-workflow.ipynb  tensor-classwork.ipynb  training-loop.ipynb
